--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -4,7 +4,7 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
-
+.bootstrap {
 @import "functions";
 @import "variables";
 @import "mixins";
@@ -42,3 +42,4 @@
 @import "spinners";
 @import "utilities";
 @import "print";
+}
